# remote_shoot

./: CMakeLists.txt  calculate_k1.py  remote_shoot.cpp  remote_shoot.h
